Fix: blog title overflow

--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ ul.share-buttons .sr-only{
 }
 
 .blog-header h1 {
-  font-size: 40px;
+  font-size: 40px !important;
 }
 
 .post .autor h1 {
